--- a/package.json
+++ b/package.json
@@ -8,8 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "framer-motion": "3.10.3",
     "next": "10.2.2",
+    "next-themes": "^0.0.14",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.2.0"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.8",
+    "autoprefixer": "^10.2.5",
+    "postcss": "^8.3.0",
+    "tailwindcss": "^2.1.2",
+    "typescript": "^4.3.2"
   }
 }
