--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 		"next-themes": "^0.0.14",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
-		"react-icons": "^4.12.0"
+		"react-icons": "^4.12.0",
+		"uuid": "^9.0.1"
 	},
 	"devDependencies": {
 		"@types/react": "^17.0.8",
